2006-12-28  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Init description field on
	domains/documents.

2006-12-27  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.doc_l10n_stats): Use potbase
	instead of docpath as domain name for docs.

	* gnome-modules.xml.in:
	* releases.xml.in: Updated a couple of modules.

	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-ui-stats-modules.tmpl: sort modules
	by id.

2006-12-27  Danilo Šegan  <danilo@gnome.org>

	Implement bug #104312.

	* update-stats.py (LocStatistics.po_file_stats): Add UTF-8
	encoding check for PO files.

2006-12-18  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add tracker.
	* releases.xml.in: Add 2.18.

2006-12-15  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Use module ID for filename.

2006-10-16  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Use /people/ here as well.

2006-09-15  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.list_modules): Check for description key
	before blindly setting it.

2006-07-31  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.generate_translated_docs): Use
	sourcedir/docbase instead of docdir.

2006-07-30  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Check for maintainer key.

2006-07-21  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.check_lang_support): Check if line is non-empty.

2006-04-20  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (compare_stats): Check if 'supportedness' is available.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: branch fast-user-switch, metacity.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: branch evince, eog, zenity.

	* update-stats.py (LocStatistics.ui_l10n_stats): Use hidden languages when updating.
	* view-module.py (get_stats_for): List hidden languages in modules as well.
