@@ -175,7 +175,9 @@ if __name__=="__main__":
         else:
             langid = test.groups()[0]
             release = test.groups()[2]
-
+            (t_rel, t_ext) = os.path.splitext(release)
+            if t_ext == '.xml':
+                release = t_rel
             #print "page: %s<br/>langid: %s<br/>release: %s<br/>" % (page, langid, release)
             myteam = TranslationTeams(only_language=langid)
             # FIXME: get language instead of team
@@ -191,7 +193,10 @@ if __name__=="__main__":
                             del team['language'][lang]
 
                 if release:
-                    html = Template(file="templates/language-release.tmpl")
+                    if t_ext == '.xml':
+                        html = Template(file="templates/language-release-xml.tmpl")
+                    else:
+                        html = Template(file="templates/language-release.tmpl")
                     html.language = langid
                     html.language_name = team['language'][langid]['content']
                     myreleases = releases.Releases(deep=1, only_release = release, gather_stats = langid).data
