@@ -1,0 +1,34 @@
+   #set $moduleids=$modules.keys()
+   #silent $moduleids.sort()
+   #for moduleid in $moduleids
+   #set $module=$modules[$moduleid]
+   #if $module.has_key('statistics') and $module.statistics.doc_size != 0
+
+    <module id="${moduleid}" branch="${module.branch}">
+      <translated>${module.statistics.doc_translated}</translated>
+      <fuzzy>${module.statistics.doc_fuzzy}</fuzzy>
+      <untranslated>${module.statistics.doc_untranslated}</untranslated>
+
+    #for docdir, document in $module.documents.items()
+     #if $document.pot_size==$document.untranslated
+       #set POFILE=$webroot+"/POT/"+$moduleid+"."+$module.branch+"/docs/"+$document.potbase+"."+$module.branch+".pot"
+       #set POINFO=$document.pot_messages
+     #else
+       #set POFILE=$webroot+"/POT/"+$moduleid+"."+$module.branch+"/docs/"+$document.potbase+"."+$module.branch+"."+$language+".po"
+       #set POINFO=$document.po_messages
+     #end if
+      <document id="${document.potbase}">
+      	<translated>${document.translated}</translated>
+      	<fuzzy>${document.fuzzy}</fuzzy>
+      	<untranslated>${document.untranslated}</untranslated>
+        <pofile>${POFILE}</pofile>
+         #for pomsgs in $POINFO
+           <error type="${pomsgs[0]}">${pomsgs[1]}</error>
+         #end for
+      </document>
+
+    #end for
+    </module>
+   #end if
+
+   #end for
