@@ -1,5 +1,12 @@
 2006-12-28  Danilo Šegan  <danilo@gnome.org>
 
+	* teams.py (TranslationTeams.compare_langs): Support .xml on releases.
+
+	* templates/language-release-xml.tmpl: Added.
+	* templates/language-release-doc-xml.tmpl: Added.
+
+2006-12-28  Danilo Šegan  <danilo@gnome.org>
+
 	* modules.py (XmlModules.__init__): Init description field on
 	domains/documents.
 
